# panorama

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  config.yaml  deny.toml  flake.nix
.github/workflows/: ci.yaml
configs/: all.toml
src/: cfg.rs  lib.rs  main.rs  notify.rs
src/fs/: cfg.rs  mod.rs
src/internet/: cfg.rs  mod.rs
src/power/: cfg.rs  mod.rs  system.rs
src/udev/: mod.rs
