[package]
name = "panoramas"
description = "Linux system status notification daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "panorama"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
futures = "0.3.29"
# dnsclient = { version = "0.1.18", default-features = false }
# rand = "0.8.5"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_yaml = "0.9.25"
tokio = { version = "1.33.0", features = ["rt", "macros", "fs", "time", "io-std", "sync", "net", "process"] }
tokio-udev = "0.9.1"
toml = "0.8.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
ureq = {version = "2.8.0", default-features = false, features = ["tls", "rustls"]}
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

# [profile.release]
# debug = 1
